<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_Match"
        android:icon="@drawable/ic_date_range_black_24dp"
        android:title="ScheduleMatch" />

    <item
        android:id="@+id/Nav_TeamCLub"
        android:icon="@drawable/ic_bola"
        android:title="TeamClub" />

    <item
        android:id="@+id/Nav_Fav"
        android:icon="@drawable/ic_favorites"
        android:title="Favorite" />




</menu>