<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lnr_prev"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/spnr_sclastmatch"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:textAlignment="center"
        android:padding="8dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcv_fragmentprev"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>