<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <FrameLayout
        android:id="@+id/fragment_controller"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/navigation">



    </FrameLayout>

    <com.a21buttons.bottomnavigationview.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        app:itemIconTint="@color/applicationColorPrimaryDark"
        app:itemTextColor="@color/white"
        app:menu="@menu/navigation" />

</RelativeLayout>